--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
    
-    <title>개발 문의</title>
+    <title>JaemooDesign_Development</title>
     
     <link rel="stylesheet" href="css/styile.css">
     
